--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "scheme": "vidhisarthi",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
