chore: change the name of app which shows under the app icon

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "vidhi_sarthi",
-    "slug": "vidhi_sarthi",
+    "name": "vidhiSarthi",
+    "slug": "vidhiSarthi",
     "scheme": "vidhisarthi",
     "version": "1.0.0",
     "orientation": "portrait",
