restore the slug name in app.json and restore the code index.js code from delaying splash screen

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "vidhiSarthi",
-    "slug": "vidhiSarthi",
+    "slug": "vidhi_sarthi",
     "scheme": "vidhisarthi",
     "version": "1.0.0",
     "orientation": "portrait",
