--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-table-component": "^1.2.2",
-    "uuid": "^11.0.2"
+    "react-native-table-component": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
