--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
-    "expo": "~51.0.34",
-    "expo-constants": "~16.0.2",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "^0.74.5",
+    "@react-navigation/native": "^7.0.0",
+    "expo": "^52.0.7",
+    "expo-constants": "~17.0.3",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-router": "~4.0.6",
+    "expo-splash-screen": "~0.29.11",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-table-component": "^1.2.2",
     "react-native-uuid": "^2.0.2"
   },
