--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
     "@react-navigation/native": "^7.0.0",
-    "expo": "^52.0.7",
+    "expo": "~52.0.11",
     "expo-constants": "~17.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
