--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "expo-constants": "~17.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.6",
+    "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-paper": "^5.12.5",
