--- a/package.json
+++ b/package.json
@@ -10,26 +10,22 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
-    "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.11",
-    "expo-constants": "~17.0.3",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "^0.76.3",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-get-random-values": "~1.11.0",
+    "expo": "~51.0.39",
+    "expo-constants": "~16.0.2",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
+    "expo-status-bar": "~1.12.1",
+    "react": "^18.2.0",
+    "react-native": "^0.74.5",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "4.1.0",
-    "react-native-svg": "15.8.0",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
     "react-native-uuid": "^2.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.17.0"
   },
   "private": true
 }
